@@ -910,14 +910,14 @@ fun axioms_for_term
                                 \add_axioms_for_term",
                                 "too many nested axioms (" ^
                                 string_of_int depth ^ ")")
-             else if Refute.is_const_of_class thy x then
+             else if is_of_class_const thy x then
                let
                  val class = Logic.class_of_const s
                  val of_class = Logic.mk_of_class (TVar (("'a", 0), [class]),
                                                    class)
                  val ax1 = try (specialize_type thy x) of_class
                  val ax2 = Option.map (specialize_type thy x o snd)
-                                      (Refute.get_classdef thy class)
+                                      (get_class_def thy class)
                in
                  fold (add_maybe_def_axiom depth) (map_filter I [ax1, ax2])
                       accum
